tests/baselines/reference/tsxElementResolution22.errors.txt
tests/cases/conformance/jsx/file.tsx(3,12): error TS2608: The global type 'JSX.ElementTypeProperty' may not have more than one property


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementTypeProperty { returnType; otherProperty; }
    	          ~~~~~~~~~~~~~~~~~~~
!!! error TS2608: The global type 'JSX.ElementTypeProperty' may not have more than one property
    }
    
    class Obj1 {
    }
    
    const obj = <Obj1 param="123"/>; // OK
    